// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetMapping returns correct props when custom color is false 1`] = `
Array [
  Object {
    "color": "#9373c0",
    "id": "1",
    "key": "item1",
    "legend": "Item 1",
    "size": 20,
  },
  Object {
    "color": "#ca5010",
    "id": "1",
    "key": "item1_2",
    "legend": "Item 1",
    "size": 20,
  },
]
`;

exports[`DatasetMapping returns correct props when custom color is true  1`] = `
Array [
  Object {
    "color": "#2aa0a4",
    "id": "1",
    "key": "item1",
    "legend": "Item 1",
    "size": 20,
  },
  Object {
    "color": "#ca5010",
    "id": "1",
    "key": "item1_2",
    "legend": "Item 1",
    "size": 20,
  },
]
`;
